--- a/PIOsimHD-Doc/TechnicalReport/ideas-design.tex
+++ b/PIOsimHD-Doc/TechnicalReport/ideas-design.tex
@@ -149,7 +149,7 @@ January 2009
 
 \section{Goals}
 \begin{itemize}
-\item Fast prototyping of new algorithms, for I/O optimization and MPI-
+\item Fast prototyping of new algorithms, for I/O optimization and MPI
 \item Reveal bottlenecks.
 \item Teaching, better understanding of observed system behavior
 \item Test applications on different cluster hardware i.e. GRIDs
@@ -179,6 +179,21 @@ http://i.cs.hku.hk/~clwang/papers/model-iwcc99.ps
 
 \chapter{Model}
 
+\begin{figure}%[!htbp]
+  \centering
+\includegraphics[scale=0.75]{Images/cluster-model.pdf}
+    \caption{Example cluster component model}
+    \label{fig:cluster-model}
+\end{figure}
+
+\begin{figure}
+  \centering
+\includegraphics[scale=0.75]{Images/cluster-relation.pdf}
+    \caption{UML diagram showing the relations between cluster components}
+    \label{fig:cluster-relation}
+\end{figure}
+
+
 * Exchangable component behavior
   Interfaces are not completely specified and can be modified as required.
 
@@ -204,8 +219,12 @@ http://i.cs.hku.hk/~clwang/papers/model-iwcc99.ps
 \chapter{PIOsimHD Package}
 \section{Source Code}
 * Split into Model, GUI, Simulation
-\section{Provided Binaries/Scripts}
-\section{Example Usage}
+\section{Provided Binaries/Scripts} %Example Usage
+piosimhd
+tau2slog2
+jumpshot
+
+
 
 
 \chapter{Design}
@@ -217,15 +236,62 @@ http://i.cs.hku.hk/~clwang/papers/model-iwcc99.ps
 * Generation of Model, on run-time the simulator instanciates classes depending on the user configuration implementing such a model. The model is fixed during simulation.
 
 \section{Model Generation}
+* builder classes assist to build a (normal) model on the fly.
+
+CommandToSimulationMapper.txt
+\begin{verbatim}
+# define the command groups and the contained implementations and the simulator implementations
+# each row is either a set of commands which are implemented or the actual set of implementation classes for these commands.
++de.hd.pvs.piosim.model.program.commands.Compute
+de.hd.pvs.piosim.simulator.component.Commands.Global.Dummy
+de.hd.pvs.piosim.simulator.component.Commands.Compute.Time
+
+#define a group:
++de.hd.pvs.piosim.model.program.commands.Send,de.hd.pvs.piosim.model.program.commands.Receive,de.hd.pvs.piosim.model.program.commands.Sendrecv # so it defines a group of commands at once which belong together.
+de.hd.pvs.piosim.simulator.component.Commands.Global.Dummy,de.hd.pvs.piosim.simulator.component.Commands.Global.Dummy,de.hd.pvs.piosim.simulator.component.Commands.Global.Dummy
+de.hd.pvs.piosim.simulator.component.Commands.SendReceive.Rendezvous.RendezvousSend,de.hd.pvs.piosim.simulator.component.Commands.SendReceive.Rendezvous.RendezvousRcv,de.hd.pvs.piosim.simulator.component.Commands.SendReceive.Rendezvous.RendezvousSendrecv
+
+...
+\end{verbatim}
+
+ModelToSimulationMapper.txt
+\begin{verbatim}
+# This file describes the existing model component of a given type i.e. "Node" the available Model implementations and mapping to the simulation implementation.
++ClientProcess
+de.hd.pvs.piosim.model.components.ClientProcess.ClientProcess = de.hd.pvs.piosim.simulator.component.ClientProcess.GClientProcess
+
++IOSubsystem
+de.hd.pvs.piosim.model.components.IOSubsystem.SimpleFlash = de.hd.pvs.piosim.simulator.component.IOSubsystem.GSimpleFlash
+de.hd.pvs.piosim.model.components.IOSubsystem.SimpleDisk = de.hd.pvs.piosim.simulator.component.IOSubsystem.GSimpleDisk
+de.hd.pvs.piosim.model.components.IOSubsystem.RefinedDiskModel = de.hd.pvs.piosim.simulator.component.IOSubsystem.GRefinedDiskModel
+
+...
+\end{verbatim}
+
 
 \section{XML Generation}
+* serialization of annotated attributes
 
 \section{Run a Simulation}
-\subsecton{Event processing}
-* Future events
+\subsection{Event processing}
+* Future events are handled inside the simulator in a priority queue sorted on the time the activities start
 * Event handling inside the components
 
 \subsection{Debugging}
+* start java with enabled assertions (\texttt{"`-ea"'} flag)
+* the ConsoleLogger class or Component Logger class prints debugging output on the console
+depending on the class (similar to \texttt{log4j}) and depending on the IDs of BasicComponents.
+\begin{verbatim}
+# The file is grouped in two sections:
+ClassNamesToTrace
+# The canonical class names which shall be debugged:
+de.hd.pvs.piosim.simulator.component.ClientProcess.GClientProcess
+
+ComponentIDsToTrace
+# The component IDs which shall be debugged:
+77
+78
+\end{verbatim}
 
 \subsection{Simulation speed}
 * 100.000 events/second
@@ -233,7 +299,15 @@ http://i.cs.hku.hk/~clwang/papers/model-iwcc99.ps
 
 \subsection{Tracing}
 Jumpshot
+* Events which are traced: client activity (similar to the activity traced normally, with arrows to show message send/recv activity), different steps of the  commands, internal activity (network pakets)
+* Example Images
 
+\section{Code Documentation}
+\subsection{JavaDoc}
+
+\subsection{UML diagrams}
+Done automatically via UMLGraph \footnote{\URL{http://www.umlgraph.org/}}, JavaDoc annotations
+allow to tune behavior.
 
 \appendix
 
