--- a/PIOsimHD-Maint/mpiwrapperNew/doc/TODO.org
+++ b/PIOsimHD-Maint/mpiwrapperNew/doc/TODO.org
@@ -1,3 +1,50 @@
+* Fragen
+*** TODO int MPI_File_open(MPI_Comm, char *, int, MPI_Info, MPI_File *);
+     - überprüfen, was MPI_File in den einzelnen Implementationen ist
+     - return-value speichern?
+     - wie soll die verbindung filehandle <-> file-id (wrapper) <-> 
+*** TODO int MPI_File_close(MPI_File *); 
+     - Dateinamen aus der hash-table entfernen?
+*** TODO int MPI_File_seek_shared(MPI_File, MPI_Offset, int);
+     -- hier wieder die absolute position rausfinden (wie bei file_write...) ?
+     -> problem: was ist, wenn anderer client in der zwischenzeit seekt?
+
+*** TODO bei Waitsome(...) etc. auch ergebnisse speichern?
+*** TODO Was machen wir mit nonblocking operations?
+		 Möglichkeit: eigenes tracking => MPI_IXX calls müssen HashVal setzen (nach 
+		request), prüfung bei MPI_Test, MPI_Wait(X) etc.
+		 Sehr aufwendig! Replikation zu MPI Interna. Für Simulator aber nötig!                                                      
+		 Bei MPI_IXX call wird neue (Thread interne) unique ID (INT) vergeben, bei 
+		Wait bzw. Waitall wird darauf gewartet.          
+		 Einfaches tracking via. (MPI_Request pointer?), HASHMAP
+		 Syntax:
+		 <Wait>
+		  <FOR aid="X"/>
+		  <FOR aid="Y"/>
+		  <FOR aid="Z"/>
+		 </Wait>
+		 => Tags auch für MPI_Waitall oder Waitsome verwendbar.        
+		 
+		 ------
+		 
+		 z.Z. wird MPI_Request nach int gecastet.
+*** INFO über MPI_Request
+     OpenMPI: /ompi-trunk/ompi/request/request.h:ompi_request_t
+*** TODO Wie genau ist das mit den Requests? MPI_REQUEST_NULL irgendwo speichern?
+
+*** TODO MPI_File_write_at -- wird hier der byte offset, oder der view-abhängige
+     Offset angegeben?
+     Genau so File_iwrite_at
+*** TODO Split-collective-Aufrufe
+    Jetzt wird geloggt:
+    ----------------------------------
+    <SplitBegin>
+    <Read file='97'>
+    </SplitBegin>
+    ...
+    <SplitEnd file='97' />
+    ----------------------------------
+    ist das in Ordnung? 
 * Aufgaben
 ** DONE Tests zum laufen kriegen
    Offizieller mpich-test compiliert größtenteils 
@@ -16,23 +63,11 @@
 *** 
 	=> stattdessen speed-multiplier vom Original? (Float value?)
  	=> Duration = mikrosekunden = 10^-6 Sekunden
-** TODO Operationen tracen
-   - [ ] 		
+** DONE Operationen tracen
 		Welche Operationen sollen getraced werden? (mpi_funcs.h, mpiio_funcs.h)
 		 Primär alle die kommunizieren oder I/O betreiben, allerdings gibt es einige 
 		wo selten eingesetzt werden und es daher nicht sinnvoll ist das gleich zu 
 		implementieren. Konkret wären anzupassende Operationen:
-*** TODO Nonblocking
-      	        int MPI_Isend(void*, int, MPI_Datatype, int, int, MPI_Comm, MPI_Request *);
-      	        int MPI_Ibsend(void*, int, MPI_Datatype, int, int, MPI_Comm, MPI_Request *);
-		int MPI_Issend(void*, int, MPI_Datatype, int, int, MPI_Comm, MPI_Request *);
-		int MPI_Irsend(void*, int, MPI_Datatype, int, int, MPI_Comm, MPI_Request *);
-		int MPI_Irecv(void*, int, MPI_Datatype, int, int, MPI_Comm, MPI_Request *);
-		int MPI_Wait(MPI_Request *, MPI_Status *);
-		int MPI_Waitany(int, MPI_Request *, int *, MPI_Status *);
-		int MPI_Waitall(int, MPI_Request *, MPI_Status *);
-		int MPI_Waitsome(int, MPI_Request *, int *, int *, MPI_Status *);
-		int MPI_Iprobe(int, int, MPI_Comm, int *, MPI_Status *);
 *** DONE MPI
     - [X] int MPI_Send(void*, int, MPI_Datatype, int, int, MPI_Comm);
     - [X] int MPI_Recv(void*, int, MPI_Datatype, int, int, MPI_Comm, MPI_Status *);
@@ -78,67 +113,81 @@
 		hinzufügen, fehler wenn
 		! MPI_THREAD_SINGLE  see: http://linux.die.net/man/3/mpi_init_thread	
 		
-*** TODO Später
-     int MPI_Comm_get_name(MPI_Comm, char *, int *); // Nutzen um den Comm namen zu 
-		ermitteln
-
-     int MPI_Comm_set_name(MPI_Comm, char *); // evtl.
-
-*** TODO I/O operationen:
-**** TODO int MPI_File_open(MPI_Comm, char *, int, MPI_Info, MPI_File *);
-     - überprüfen, was MPI_File in den einzelnen Implementationen ist
-     - return-value speichern?
-**** TODO		
-     int MPI_File_close(MPI_File *);
-     int MPI_File_delete(char *, MPI_Info);
-		
-		int MPI_File_set_size(MPI_File, MPI_Offset);
-		
-		int MPI_File_preallocate(MPI_File, MPI_Offset);
-		int MPI_File_get_size(MPI_File, MPI_Offset *);
-		
-		int MPI_File_set_info(MPI_File, MPI_Info); // optional machen ;-)
-		
-		int MPI_File_read(MPI_File, void *, int, MPI_Datatype, MPI_Status *); 
-		int MPI_File_read_all(MPI_File, void *, int, MPI_Datatype, MPI_Status *); 
-		int MPI_File_write(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
-		int MPI_File_write_all(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
-		int MPI_File_iread(MPI_File, void *, int, MPI_Datatype, MPIO_Request *); 
-		int MPI_File_iwrite(MPI_File, void *, int, MPI_Datatype, MPIO_Request *);
-		
-		int MPI_File_set_atomicity(MPI_File, int);
-		int MPI_File_sync(MPI_File);
-		
-		int MPI_File_read_shared(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
-		int MPI_File_write_shared(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
-		
-		int MPI_File_read_ordered(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
-		int MPI_File_write_ordered(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
-		
-		int MPI_File_seek_shared(MPI_File, MPI_Offset, int);
-		
-		int MPI_File_read_at_all_end(MPI_File, void *, MPI_Status *);
-		int MPI_File_write_at_all_end(MPI_File, void *, MPI_Status *);
-		
-		int MPI_File_read_all_begin(MPI_File, void *, int, MPI_Datatype);
-		int MPI_File_read_all_end(MPI_File, void *, MPI_Status *);
-		
-		int MPI_File_write_all_begin(MPI_File, void *, int, MPI_Datatype);
-		int MPI_File_write_all_end(MPI_File, void *, MPI_Status *);
-		
-		int MPI_File_read_ordered_begin(MPI_File, void *, int, MPI_Datatype);
-		int MPI_File_read_ordered_end(MPI_File, void *, MPI_Status *);
-		int MPI_File_write_ordered_begin(MPI_File, void *, int, MPI_Datatype);
-		int MPI_File_write_ordered_end(MPI_File, void *, MPI_Status *);
-		
+*** DONE Nonblocking
+    - [X] int MPI_Isend(void*, int, MPI_Datatype, int, int, MPI_Comm, MPI_Request *);
+    - [X] int MPI_Ibsend(void*, int, MPI_Datatype, int, int, MPI_Comm, MPI_Request *);
+    - [X] int MPI_Issend(void*, int, MPI_Datatype, int, int, MPI_Comm, MPI_
+    - [X] int MPI_Irsend(void*, int, MPI_Datatype, int, int, MPI_Comm, MPI_Request *);
+    - [X] int MPI_Irecv(void*, int, MPI_Datatype, int, int, MPI_Comm, MPI_Request *);
+    - [X] int MPI_Wait(MPI_Request *, MPI_Status *);
+    - [X] int MPI_Waitany(int, MPI_Request *, int *, MPI_Status *);
+    - [X] int MPI_Waitall(int, MPI_Request *, MPI_Status *);
+    - [X] int MPI_Waitsome(int, MPI_Request *, int *, int *, MPI_Status *);
+    - [X] int MPI_Iprobe(int, int, MPI_Comm, int *, MPI_Status *);
 
 
-*** TODO Alle weiteren Operationen
+*** DONE I/O operationen:
+**** DONE
+     - [X] int MPI_File_seek_shared(MPI_File, MPI_Offset, int);
+     - [X] int MPI_File_open(MPI_Comm, char *, int, MPI_Info, MPI_File *);
+     - [X] int MPI_File_delete(char *, MPI_Info);
+     - [X] int MPI_File_close(MPI_File *); 
+     int MPI_File_set_size(MPI_File, MPI_Offset);
+     int MPI_File_preallocate(MPI_File, MPI_Offset);
+     int MPI_File_get_size(MPI_File, MPI_Offset *);
+
+     - [X] int MPI_File_read(MPI_File, void *, int, MPI_Datatype, MPI_Status *); 
+     - [X] int MPI_File_read_at(MPI_File, void *, int, MPI_Datatype, MPI_Status *); 
+     - [X] int MPI_File_read_all(MPI_File, void *, int, MPI_Datatype, MPI_Status *); 
+     - [X] int MPI_File_read_at_all(MPI_File, void *, int, MPI_Datatype, MPI_Status *); 
+
+     - [X] int MPI_File_write(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
+     - [X] int MPI_File_write_at(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
+     - [X] int MPI_File_write_all(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
+     - [X] int MPI_File_write_at_all(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
+
+     - [X] int MPI_File_set_atomicity(MPI_File, int);
+     - [X] int MPI_File_sync(MPI_File);
+		
+     - [X] int MPI_File_read_shared(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
+     - [X] int MPI_File_write_shared(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
+		
+     - [X] int MPI_File_read_ordered(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
+     - [X] int MPI_File_write_ordered(MPI_File, void *, int, MPI_Datatype, MPI_Status *);
+     
+*** DONE I/O nonblocking + split
+    - [X] int MPI_File_iread(MPI_File, void *, int, MPI_Datatype, MPIO_Request *); 
+    - [X] int MPI_File_iwrite(MPI_File, void *, int, MPI_Datatype, MPIO_Request *);
+
+    - [X] int MPI_File_iwrite_at
+    - [X] int MPI_File_iread_at
+
+    - [X] int MPI_File_read_at_all_begin(MPI_File, void *, MPI_Status *);
+    - [X] int MPI_File_write_at_all_end(MPI_File, void *, MPI_Status *);
+		
+    - [X] int MPI_File_read_all_begin(MPI_File, void *, int, MPI_Datatype);
+    - [X] int MPI_File_read_all_end(MPI_File, void *, MPI_Status *);
+		
+    - [X] int MPI_File_write_all_begin(MPI_File, void *, int, MPI_Datatype);
+    - [X] int MPI_File_write_all_end(MPI_File, void *, MPI_Status *);
+
+    - [X] int MPI_File_read_ordered_begin(MPI_File, void *, int, MPI_Datatype);
+    - [X] int MPI_File_read_ordered_end(MPI_File, void *, MPI_Status *);
+    - [X] int MPI_File_write_ordered_begin(MPI_File, void *, int, MPI_Datatype);
+    - [X] int MPI_File_write_ordered_end(MPI_File, void *, MPI_Status *);
+
+*** DONE Alle weiteren Operationen
 	Alle weiteren Operation z.b. MPI_Get_Count können einfach stdmäßig mit time + 
 	duration getraced werden (Umgebungsvariable aktiviert das, nicht sinnvoll für 
 	SImulator, aber für allgemeinen Tracer)..
 
+	--> wird durch
+	    static int trace_all_functions 
+	    geregelt
 	
+*** DONE Später
+**** DONE     int MPI_Comm_get_name(MPI_Comm, char *, int *); // Nutzen um den Comm namen zu 
+		ermitteln
 ** TODO Durations
    - [ ] durations in MPI-I/O ops
 ***
@@ -148,18 +197,25 @@
 		 Redundant zu Compute Operationen! Evtl. wird später bei Compute noch weitere 
 		Information z.b. counter eingefügt.
 		 Duration erst bekannt nachdem die Operation
-		 ausgeführt wurde.								
-** TODO Optionale Features
+		 ausgeführt wurde.				
+*** TODO
+		Noch was zum timestamp: nach ein wenig überlegen, denke ich der sollte mit 
+		gettimeofday bestimmt worden sein, d.h. nicht die MPI_time ...
+		dann wird natürlich seconds.nanoseconds geschrieben. 
+		
+		-> seconds.milliseconds...
+				
+** TODO Optionales Logging
    - [ ] Compute Tags sollten optional entfernbar sein, z.b. Umgebungsvariable einlesen 
 		am Anfang (MPI_init)... ;-)
    - [ ] Ebenso sollte die nested operation aktivierbar sein (std: nicht aktiv).
-
-***
+**** TODO int MPI_File_set_info(MPI_File, MPI_Info); // optional machen ;-)
+     schon geloggt, aber noch nicht optional
+*** TODO File_Info rausschreiben 	
 		Es wäre cool wenn man bei MPI-IO operationen noch die MPI_File_Info optional 
 		rausschreiben könnte, machbar mit:
 		int MPI_Info_get_nkeys(MPI_Info, int *); 
 		int MPI_Info_get_nthkey(MPI_Info, int, char *);
-*** File_Info rausschreiben 	
    - [ ] File_Info rausschreiben 
 
 ** TODO MPI_Pcontrol(...) benutzen?
@@ -177,7 +233,7 @@
 
 
 ** TODO Sinnvolle Namen für den Communicator
-   - [ ] 
+**** TODO  int MPI_Comm_set_name(MPI_Comm, char *); // evtl.
 ***
 		Bisher war es so das der Communicator im allgemeinen XML definiert welche 
 		(realen) ranks darin enthalten sind.
@@ -236,25 +292,11 @@
 		 Tiefere Verschachtelung ist ja möglich. (Kann aber gerne durch #DEFINE im 
 		code limitiert sein).             
 
-** TODO Was machen wir mit nonblocking operations?
-   - [ ] 
-***
-		 Möglichkeit: eigenes tracking => MPI_IXX calls müssen HashVal setzen (nach 
-		request), prüfung bei MPI_Test, MPI_Wait(X) etc.
-		 Sehr aufwendig! Replikation zu MPI Interna. Für Simulator aber nötig!                                                      
-		 Bei MPI_IXX call wird neue (Thread interne) unique ID (INT) vergeben, bei 
-		Wait bzw. Waitall wird darauf gewartet.          
-		 Einfaches tracking via. (MPI_Request pointer?), HASHMAP
-		 Syntax:
-		 <Wait>
-		  <FOR aid="X"/>
-		  <FOR aid="Y"/>
-		  <FOR aid="Z"/>
-		 </Wait>
-		 => Tags auch für MPI_Waitall oder Waitsome verwendbar.        
-		 
+
 ** TODO Makros in Funktionen umwandeln?
 ** TODO Testen
+*** TODO mpi2test/pt2pt/sendrecv3 stürzt ab?
+*** TODO Abbruch bei multithreaded-anwendungen
 * INFO
 ** Threads 
    - [ ] Wie für threads etc?
